src/objects/Core_IPS_Supported_Product__c.object
<CustomObject>
    <fields>
        <fullName>Core_EOIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to expire assets related to this Product</description>
        <inlineHelpText>Check this to expire related assets</inlineHelpText>
        <label>EOIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Flag_Status__c</fullName>
        <description>This is to show the access setting for each Supported Product</description>
        <inlineHelpText>A value is mandatory for this field.</inlineHelpText>
        <label>Access Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Par Hidden</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Auto Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_IPS_Code_Name__c</fullName>
        <description>Updated through a Workflow Rule. Used in SOSL (Product Search). Not shown on layouts.</description>
        <label>Code Name for Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Duplicate_Supp_Product_Warning__c</fullName>
        <formula>Core_Product_Organization__r.Name  &amp;  Core_Supported_Product_Name__c</formula>
        <label>Duplicate Supp Product Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Platform_Name__c</fullName>
        <description>Comma separated list of Platform values as derived from the Product Master Data.</description>
        <inlineHelpText>Derived from the Product master record where available. Read only field.</inlineHelpText>
        <label>Platform Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Application__c</fullName>
        <description>This is the description for the Intel Support Org that supports this product</description>
        <formula>Core_Product_Organization__r.Core_Organization_Description__c</formula>
        <inlineHelpText>This is the description for the Intel Support Org that supports this product</inlineHelpText>
        <label>Product Focus Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_EPM_ID__c</fullName>
        <description>Shown on Save. Inherited from the Product Master record. Cannot be edited.</description>
        <inlineHelpText>Shown on Save. Inherited from the Product Master record. Cannot be edited.</inlineHelpText>
        <label>Product EPM ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Organization__c</fullName>
        <label>Support Org ID</label>
        <referenceTo>Core_IPS_Product_Organization__c</referenceTo>
        <relationshipLabel>Supported Products</relationshipLabel>
        <relationshipName>Supported_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Support_Launch_Date__c</fullName>
        <description>A read/write field that can be edited by the Support Org admin to capture the start of the Support life cycle of a particular product. The value varies by Support Org. This is not the same as the Product Launch Date which comes from Enterprise product data.</description>
        <inlineHelpText>A read/write field that can be edited by a Support Org admin to capture the start of the Support life cycle of a product. The value varies by Support Org.</inlineHelpText>
        <label>Support Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Support_Org_Name__c</fullName>
        <description>Support Org Name to be used on Asset layouts.</description>
        <formula>Core_Product_Organization__r.Core_IPS_Support_Org_Name__c</formula>
        <label>Support Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Alias__c</fullName>
        <description>Field editable by Support Org Admins. Add nicknames or other easily recognizable names to enable search on Case.</description>
        <inlineHelpText>Editable by the Support Org Admin. Add nicknames or easily recognizable names to enable search on Case.</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Name__c</fullName>
        <description>Identical to EPM Product Name. Copied from EPM Product Name on Save. Cannot be edited.</description>
        <inlineHelpText>Copied from EPM Product Name on Save. Cannot be edited.</inlineHelpText>
        <label>Supported Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Tag__c</fullName>
        <description>A free form text field used by Support Org Admins to group products around security sensitivity within their Product Life Cycle phase. Possible values include “Early Access”,  “Hot” or “Focus”, “Pre-Launch”, “Post-Launch”, “Revenue”, “Sustaining” etc.</description>
        <inlineHelpText>Used by Support Org Admins to group products around security sensitivity within their Product Life Cycle phase. Possible values include “Early Access”,  “Hot” or “Focus”, “Pre-Launch”, “Post-Launch”, “Revenue”, “Sustaining”.</inlineHelpText>
        <label>Search/Reporting Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Unique_Supported_Product__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Hidden field. 
Contains the concatenation of Supported Org ID (SFDC ID) and the Product EPM ID. Case sensitive.
Set to unique to ensure a single EPM ID can be added to a Support Org only once.</description>
        <label>Unique Supported Product</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Supported Product</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Supported Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supported Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Prevent_EOIS_Removal</fullName>
        <active>true</active>
        <description>This validation rule will prevent the clearing of the EOIS checkbox on a Supported Product.  We are preventing this in R1 because of the impact it can have on MAP/PAR</description>
        <errorConditionFormula>AND(Core_EOIS__c=FALSE, PRIORVALUE(Core_EOIS__c)=TRUE)</errorConditionFormula>
        <errorMessage>Once set to EOIS, you cannot clear the EOIS value from a Supported Product.</errorMessage>
    </validationRules>
</CustomObject>